// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopViewer default MoreInformationContent 1`] = `"<p>Clicking \\"Launch Remote Viewer\\" will download a .vv file and launch <i>Remote Viewer</i></p>"`;

exports[`DesktopViewer empty 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__desktop-viewer"
  >
    <div
      class="pf-c-console__remote-viewer"
    >
      <div
        class="pf-c-console__remote-viewer-launch"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled pf-c-console__remote-viewer-launch-vv"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          Launch Remote Viewer
        </button>
      </div>
    </div>
    <div
      class="pf-c-console__manual-connection"
    >
      <h2
        class="pf-c-title pf-m-3xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Manual Connection
      </h2>
      <p>
        No connection available.
      </p>
      <dl
        class="pf-c-description-list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DesktopViewer with Spice and VNC 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__desktop-viewer"
  >
    <div
      class="pf-c-console__remote-viewer"
    >
      <div
        class="pf-c-console__remote-viewer-launch"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary pf-c-console__remote-viewer-launch-vv"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Launch Remote Viewer
        </button>
      </div>
      <div
        class="pf-c-expandable-section"
      >
        <button
          aria-expanded="false"
          class="pf-c-expandable-section__toggle"
          type="button"
        >
          <span
            class="pf-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <span
            class="pf-c-expandable-section__toggle-text"
          >
            Remote Viewer Details
          </span>
        </button>
        <div
          class="pf-c-expandable-section__content"
          hidden=""
          id=""
        >
          <dl
            class="pf-c-description-list pf-m-horizontal"
          >
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  RHEL, CentOS
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo yum install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Fedora
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo dnf install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Ubuntu, Debian
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo apt-get install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Windows
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  <div>
                    Download the MSI from 
                    <a
                      href="https://virt-manager.org/download/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      virt-manager.org
                    </a>
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="pf-c-console__manual-connection"
    >
      <h2
        class="pf-c-title pf-m-3xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Manual Connection
      </h2>
      <p>
        Connect with any viewer application for following protocols
      </p>
      <dl
        class="pf-c-description-list"
      >
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              Address
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              my.host.com
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5900
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5901
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5902
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5903
            </div>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DesktopViewer with Spice, VNC and RDP (different hostname) 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__desktop-viewer"
  >
    <div
      class="pf-c-console__remote-viewer"
    >
      <div
        class="pf-c-console__remote-viewer-launch"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary pf-c-console__remote-viewer-launch-vv"
          data-ouia-component-id="OUIA-Generated-Button-primary-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Launch Remote Viewer
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary pf-c-console__remote-viewer-launch-rdp"
          data-ouia-component-id="OUIA-Generated-Button-primary-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Launch Remote Desktop
        </button>
      </div>
      <div
        class="pf-c-expandable-section"
      >
        <button
          aria-expanded="false"
          class="pf-c-expandable-section__toggle"
          type="button"
        >
          <span
            class="pf-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <span
            class="pf-c-expandable-section__toggle-text"
          >
            Remote Viewer Details
          </span>
        </button>
        <div
          class="pf-c-expandable-section__content"
          hidden=""
          id=""
        >
          <dl
            class="pf-c-description-list pf-m-horizontal"
          >
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  RHEL, CentOS
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo yum install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Fedora
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo dnf install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Ubuntu, Debian
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo apt-get install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Windows
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  <div>
                    Download the MSI from 
                    <a
                      href="https://virt-manager.org/download/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      virt-manager.org
                    </a>
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
      <div
        class="pf-c-expandable-section"
      >
        <button
          aria-expanded="false"
          class="pf-c-expandable-section__toggle"
          type="button"
        >
          <span
            class="pf-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <span
            class="pf-c-expandable-section__toggle-text"
          >
            Remote Desktop Details
          </span>
        </button>
        <div
          class="pf-c-expandable-section__content"
          hidden=""
          id=""
        />
      </div>
    </div>
    <div
      class="pf-c-console__manual-connection"
    >
      <h2
        class="pf-c-title pf-m-3xl"
        data-ouia-component-id="OUIA-Generated-Title-4"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Manual Connection
      </h2>
      <p>
        Connect with any viewer application for following protocols
      </p>
      <dl
        class="pf-c-description-list"
      >
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              Address
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              my.host.com
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              RDP Address
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              my.differenthost.com
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5900
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5901
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5902
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5903
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              RDP Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              1234
            </div>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DesktopViewer with Spice, VNC and RDP 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__desktop-viewer"
  >
    <div
      class="pf-c-console__remote-viewer"
    >
      <div
        class="pf-c-console__remote-viewer-launch"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary pf-c-console__remote-viewer-launch-vv"
          data-ouia-component-id="OUIA-Generated-Button-primary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Launch Remote Viewer
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary pf-c-console__remote-viewer-launch-rdp"
          data-ouia-component-id="OUIA-Generated-Button-primary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Launch Remote Desktop
        </button>
      </div>
      <div
        class="pf-c-expandable-section"
      >
        <button
          aria-expanded="false"
          class="pf-c-expandable-section__toggle"
          type="button"
        >
          <span
            class="pf-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <span
            class="pf-c-expandable-section__toggle-text"
          >
            Remote Viewer Details
          </span>
        </button>
        <div
          class="pf-c-expandable-section__content"
          hidden=""
          id=""
        >
          <dl
            class="pf-c-description-list pf-m-horizontal"
          >
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  RHEL, CentOS
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo yum install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Fedora
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo dnf install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Ubuntu, Debian
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  sudo apt-get install virt-viewer
                </div>
              </dd>
            </div>
            <div
              class="pf-c-description-list__group"
            >
              <dt
                class="pf-c-description-list__term"
              >
                <span
                  class="pf-c-description-list__text"
                >
                  Windows
                </span>
              </dt>
              <dd
                class="pf-c-description-list__description"
              >
                <div
                  class="pf-c-description-list__text"
                >
                  <div>
                    Download the MSI from 
                    <a
                      href="https://virt-manager.org/download/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      virt-manager.org
                    </a>
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
      <div
        class="pf-c-expandable-section"
      >
        <button
          aria-expanded="false"
          class="pf-c-expandable-section__toggle"
          type="button"
        >
          <span
            class="pf-c-expandable-section__toggle-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <span
            class="pf-c-expandable-section__toggle-text"
          >
            Remote Desktop Details
          </span>
        </button>
        <div
          class="pf-c-expandable-section__content"
          hidden=""
          id=""
        />
      </div>
    </div>
    <div
      class="pf-c-console__manual-connection"
    >
      <h2
        class="pf-c-title pf-m-3xl"
        data-ouia-component-id="OUIA-Generated-Title-3"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Manual Connection
      </h2>
      <p>
        Connect with any viewer application for following protocols
      </p>
      <dl
        class="pf-c-description-list"
      >
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              Address
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              my.host.com
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5900
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              SPICE TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5901
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5902
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              VNC TLS Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              5903
            </div>
          </dd>
        </div>
        <div
          class="pf-c-description-list__group"
        >
          <dt
            class="pf-c-description-list__term"
          >
            <span
              class="pf-c-description-list__text"
            >
              RDP Port
            </span>
          </dt>
          <dd
            class="pf-c-description-list__description"
          >
            <div
              class="pf-c-description-list__text"
            >
              3389
            </div>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;
